# histogramParallel

./: .gitignore  .hgignore  CMakeLists.txt  plot.py  run.sh
.cache/clangd/index/: AccurateTimers.cpp.B3D555BAB7122B50.idx  AccurateTimers.h.48967453323EC14B.idx  CPUParallelismNCP.cpp.1973FC570C4D4A80.idx  CPUParallelismNCP.h.3EF42E710C6F4A49.idx  CPUParallelismTest.cpp.772F0ED803A85822.idx  CPUParallelismTest.h.C017B23FC2102EF3.idx  CPUParallelismUtilityFunctions.h.CA4DA145CB3B0760.idx  CUDADriverInfo.h.E0B5392B9525871E.idx  CUDAEventTimer.h.C95ED9A1F3B44D9D.idx  CUDAGPUComputingAbstraction.h.140AAF8409F14110.idx  CUDALinearAlgebraGPUComputingStressTest.h.99720C70A1466E0B.idx  CUDAMemoryHandlers.h.38807B232F2507F1.idx  CUDAMemoryWrappers.h.8E5DE19673DC585C.idx  CUDAProcessMemoryPool.h.D41D5CA3D7516B35.idx  CUDAStreamsHandler.h.860E56C7E392A289.idx  CUDAUtilityFunctions.h.83FAB1ABDABBDA6C.idx  ColorHistogramTest.cpp.BB6EBCAA716DDD9E.idx  ColorHistogramTest.h.E0CDBC0DEA604B54.idx  ConcurrentBlockingQueue.h.D1E5E044E60D96FB.idx  EnvironmentConfig.h.24259FD126601069.idx  FunctionView.h.6636B34E384CD3FF.idx  HostDeviceStressTests.cpp.E2458F313CD51CEF.idx  HostDeviceStressTests.h.D8BDF5A1F6827127.idx  HostStressTests.cpp.5AB64ABD3219A276.idx  HostStressTests.h.B3E36A6D32AD5DDF.idx  HostUnitTests.cpp.5A0076D67D2E45FC.idx  HostUnitTests.h.0FD0519CDBD26C03.idx  LinearAlgebraCPUComputingStressTest.cpp.D9B4A9C21A248817.idx  LinearAlgebraCPUComputingStressTest.h.B20CA2C9B7FA9DC0.idx  MathConstants.h.7B130922FF1ED4E5.idx  ModuleDLL.h.10C416B5F49123DB.idx  ModuleDLL.h.C62CDDF0314EC392.idx  Randomizers.cpp.CE68BC367FAFA71E.idx  Randomizers.h.35DA594808297E49.idx  SIMDVectorizations.h.31CCEAC711D8F399.idx  ThreadBarrier.cpp.086250ADA6BBDF3A.idx  ThreadBarrier.h.922AB084C6710BD5.idx  ThreadGuard.cpp.53BE87619852CFCA.idx  ThreadGuard.h.41420DD63B14E830.idx  ThreadJoiner.cpp.12BBC496D11C0938.idx  (+46 more)
.hg/: dirstate  last-message.txt  undo.backup.dirstate.bck
.hg/cache/: branch2-served  rbc-revs-v1  tags2-visible
.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo  undo.backupfiles
.hg/store/data/: _c_make_lists.txt.i  ~2ehgignore.i
.hg/store/data/_architecture/: _g_p_u _framework _c&_c++ _language _syntax.pdf.d  _g_p_u _framework _c&_c++ _language _syntax.pdf.i  _g_p_u _framework _documentation.pdf.d  _g_p_u _framework _documentation.pdf.i  _g_p_u _framework _short _presentation.pdf.d  _g_p_u _framework _short _presentation.pdf.i
.hg/store/data/_assets/: alps.png.d  alps.png.i
.hg/store/data/_g_p_u_framework_tests/: _c_make_lists.txt.i
.hg/store/data/_g_p_u_framework_tests/include/: _c_make_lists.txt.i  _device_unit_tests.h.i  _host_device_stress_tests.h.i  _host_stress_tests.h.i  _host_unit_tests.h.i
.hg/store/data/_g_p_u_framework_tests/src/: _c_make_lists.txt.i  _device_unit_tests.cu.i  _host_device_stress_tests.cpp.i  _host_stress_tests.cpp.i  _host_unit_tests.cpp.i
.hg/store/data/_google_test/: _c_make_lists.txt.i
.hg/store/data/_google_test/cmake/: internal__utils.cmake.i
.hg/store/data/_google_test/src/: gtest-all.cc.i  gtest-assertion-result.cc.i  gtest-death-test.cc.i  gtest-filepath.cc.i  gtest-internal-inl.h.i  gtest-matchers.cc.i  gtest-port.cc.i  gtest-printers.cc.i  gtest-test-part.cc.i  gtest-typed-test.cc.i  gtest.cc.i  gtest__main.cc.i
.hg/store/data/_scripts/: doxygen.in.i
.hg/store/data/_scripts/_c_make/: _code_coverage.cmake.i  _macro_utils.cmake.i
.hg/store/data/_scripts/cmd_windows/: _template.vcxproj.user.in.i  run_all_unit_tests.cmd.in.i
.hg/store/data/_utils/: _c_make_lists.txt.i
.hg/store/data/_utils/include/: _accurate_timers.h.i  _c_make_lists.txt.i  _environment_config.h.i  _function_view.h.i  _math_constants.h.i  (+8 more)
.hg/store/data/_utils_c_u_d_a/: _c_make_lists.txt.i
.hg/wcache/: manifestfulltextcache
GPUFrameworkTests/: CMakeLists.txt
GPUFrameworkTests/include/: CMakeLists.txt  DeviceUnitTests.h  HostDeviceStressTests.h  HostStressTests.h  HostUnitTests.h
GPUFrameworkTests/include/Tests/: CPUParallelismTest.h  CUDALinearAlgebraGPUComputingStressTest.h  CUDALinearAlgebraGPUComputingTest.h  ColorHistogramGPUTest.h  ColorHistogramTest.h  LinearAlgebraCPUComputingStressTest.h
GPUFrameworkTests/src/: CMakeLists.txt  DeviceUnitTests.cu  HostDeviceStressTests.cpp  HostStressTests.cpp  HostUnitTests.cpp
GPUFrameworkTests/src/Tests/: CPUParallelismTest.cpp  CUDALinearAlgebraGPUComputingStressTest.cu  CUDALinearAlgebraGPUComputingTest.cu  ColorHistogramGPUTest.cu  ColorHistogramTest.cpp  LinearAlgebraCPUComputingStressTest.cpp
GoogleTest/: CMakeLists.txt
Scripts/: doxygen.in
Scripts/CMake/: CodeCoverage.cmake  MacroUtils.cmake
Scripts/cmdWindows/: Template.vcxproj.user.in  runAllUnitTests.cmd.in
Utils/: CMakeLists.txt
Utils/include/: AccurateTimers.h  CMakeLists.txt  EnvironmentConfig.h  FunctionView.h  MathConstants.h  ModuleDLL.h  NewHandlerSupport.h  Randomizers.h  SIMDVectorizations.h  UnitTests.h  UtilityFunctions.h  VectorTypes.h  lodepng.h
Utils/include/CPUParallelism/: CMakeLists.txt  CPUParallelismNCP.h  CPUParallelismUtilityFunctions.h  ConcurrentBlockingQueue.h  ThreadBarrier.h  ThreadGuard.h  ThreadJoiner.h  ThreadOptions.h  ThreadPool.h
Utils/src/: AccurateTimers.cpp  CMakeLists.txt  Randomizers.cpp  UnitTests.cpp  UtilityFunctions.cpp  lodepng.cpp
Utils/src/CPUParallelism/: CMakeLists.txt  CPUParallelismNCP.cpp  ThreadBarrier.cpp  ThreadGuard.cpp  ThreadJoiner.cpp  ThreadOptions.cpp  ThreadPool.cpp
UtilsCUDA/: CMakeLists.txt
UtilsCUDA/include/: CMakeLists.txt  CUDADriverInfo.h  CUDAEventTimer.h  CUDAGPUComputingAbstraction.h  CUDAKernelLauncher.h  CUDAMemoryHandlers.h  CUDAMemoryPool.h  CUDAMemoryRegistry.h  CUDAMemoryWrappers.h  CUDAParallelFor.h  CUDAProcessMemoryPool.h  CUDAQueue.h  CUDASpinLock.h  CUDAStreamsHandler.h  CUDAUtilityDeviceFunctions.h  CUDAUtilityFunctions.h  ModuleDLL.h  OutputTypes.h
UtilsCUDA/src/: CMakeLists.txt  CUDADriverInfo.cu  CUDAEventTimer.cu  CUDAMemoryPool.cu  CUDAMemoryRegistry.cu  CUDAProcessMemoryPool.cu  CUDAStreamsHandler.cu  CUDAUtilityFunctions.cu
(+80 files in other folders)
